@@ -1627,7 +1627,7 @@ API_EXPORT(long) send_fd_length(FILE *f, request_rec *r, long length)
                 else if (errno == EAGAIN)
                     continue;
                 else {
-                    aplog_error(APLOG_MARK, APLOG_WARNING, r->server,
+                    aplog_error(APLOG_MARK, APLOG_INFO, r->server,
                      "%s client stopped connection before send body completed",
                                 get_remote_host(r->connection,
                                                 r->per_dir_config,
@@ -1725,7 +1725,7 @@ API_EXPORT(long) send_fb_length(BUFF *fb, request_rec *r, long length)
                 else if (errno == EAGAIN)
                     continue;
                 else {
-                    aplog_error(APLOG_MARK, APLOG_WARNING, r->server,
+                    aplog_error(APLOG_MARK, APLOG_INFO, r->server,
                      "%s client stopped connection before send body completed",
                                 get_remote_host(r->connection,
                                                 r->per_dir_config,
@@ -1793,7 +1793,7 @@ API_EXPORT(size_t) send_mmap(void *mm, request_rec *r, size_t offset,
                 else if (errno == EAGAIN)
                     continue;
                 else {
-                    aplog_error(APLOG_MARK, APLOG_WARNING, r->server,
+                    aplog_error(APLOG_MARK, APLOG_INFO, r->server,
                      "%s client stopped connection before send mmap completed",
                                 get_remote_host(r->connection,
                                                 r->per_dir_config,
